@@ -1,3 +1,7 @@
+2013-08-13  Jihoon Kim
+
+	* Ecore_IMF: add ecore_imf_context_input_panel_on_demand_set/get()
+
 2013-08-09  Cedric Bail
 
 	* Edje: add edje_object_mmap_set().
